monitor/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: xconnected
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        volumeMounts:
          - name: storage-volume
            mountPath: /var/lib/grafana
      volumes:
        - name: storage-volume
          hostPath:
            path: /data/grafana
            type: Directory
