monitor/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: xconnected
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: grafana
  type: LoadBalancer
  externalIPs:
    - 192.168.29.42
