monitor/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: xconnected
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
  type: LoadBalancer
  externalIPs:
    - 192.168.29.42
