monitor/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: xconnected
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      - path: /gf_ana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
